apps/base/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb-gatewayclass
spec:
  controllerName: alb.networking.azure.io/alb-controller
